Fix animation form using css animation, remove code for blocking some keyboard actions, fix scroll stuck on small device, disable right click event;

--- a/css/animation.css
+++ b/css/animation.css
@@ -8,17 +8,21 @@
 
 /*Animation Keyframes*/  
 @keyframes floating {
-    0% { transform: translate(0,  0px); }
-    50%  { transform: translate(-8px, 15px); }
-    100%   { transform: translate(0, -0px); }    
-}
-
-@-webkit-keyframes animatetop {
-  from {top:-300px; opacity:0} 
-  to {top:0; opacity:1}
+    0% {transform: translate(0, 0);}
+    50% {transform: translate(-8px, 15px);}
+    100% {transform: translate(0, 0);}    
 }
 
 @keyframes animatetop {
   from {top:-300px; opacity:0}
   to {top:0; opacity:1}
+}
+
+@keyframes showFormOpacity {
+  from {opacity: 0; transform: translate(-50%, -50%) scale(.3);}
+  to {opacity: 1; transform: translate(-50%, -50%) scale(1);}}
+
+@keyframes hideFormOpacity {
+  from {opacity: 1;}
+  to {opacity: 0;}
 }
